--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <!-- Collapsable navbar -->
         <div class="collapse navbar-collapse" id="mainNavbar">
           <!-- Navbar right -->
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a data-toggle="tab" href="#home">bio</a></li>
-            <li><a data-toggle="tab" href="#projects">projects</a></li>
-            <li><a data-toggle="tab" href="#journal">journal</a></li>
+          <ul class="nav nav-pills navbar-nav navbar-right">
+            <li class="active"><a data-toggle="pill" href="#home">bio</a></li>
+            <li><a data-toggle="pill" href="#projects">projects</a></li>
+            <li><a data-toggle="pill" href="#journal">journal</a></li>
           </ul>
         </div>
         <!-- Collapsabe navbar -->
@@ -76,10 +76,10 @@
           <p class="text-justify">
             Hi! I'm Nikhil Jolly, a game designer and programmer from India.
             I aspire to be a renaissance man and am usually found juggling
-            between numereous things that I like to do.</br></br>
+            between numerous things that I like to do.</br></br>
             On a casual day, I spend my time developing games as a freelancer,
             working on my personal projects and improving my art & composition skills.
-            And ocassionally, I tend to tinker with new things and explore new places.</br></br>
+            And occasionally, I tend to tinker with new things and explore new places.</br></br>
             More often than not, I spend a lot of time thinking,
             listening to music, reading online and improving myself.
           </p>
@@ -90,18 +90,22 @@
       <!-- Projects -->
       <div class="tab-pane fade below-navbar" id="projects">
         <div class="container-fluid">
+
             <h1 class="section-title">Projects</h1>
 
-
-            <!-- 1st row: Two columns -->
+            <!-- 1st row: Three columns -->
             <div class="row">
+              <!-- Domination -->
+              <div class="col-sm-4 portfolio_item">
+                <img class="img-responsive" src="assets/images/domination/cover.jpg" alt="Domination"/>
+              </div>
               <!-- Mirrors -->
-              <div class="col-sm-6 portfolio_item" id="mirrors">
+              <div class="col-sm-4 portfolio_item" id="mirrors">
                 <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Mirrors"/>
               </div>
               <!-- Pizza Craft -->
-              <div class="col-sm-6 portfolio_item">
-                <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Pizza Craft"/>
+              <div class="col-sm-4 portfolio_item">
+                <img class="img-responsive" src="assets/images/pizzacraft/cover.jpg" alt="Pizza Craft"/>
               </div>
             </div>
 
@@ -109,15 +113,15 @@
             <div class="row">
               <!-- Crazy Jumper -->
               <div class="col-sm-4 portfolio_item">
-                <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Crazy Jumper"/>
+                <img class="img-responsive" src="assets/images/crazyjumper/cover.jpg" alt="Crazy Jumper"/>
               </div>
               <!-- Adventure Island -->
               <div class="col-sm-4 portfolio_item">
-                <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Adventure Island"/>
+                <img class="img-responsive" src="assets/images/3disland/cover.jpg" alt="Adventure Island"/>
               </div>
-              <!-- Domination -->
+              <!-- Runout -->
               <div class="col-sm-4 portfolio_item">
-                <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Domination"/>
+                <img class="img-responsive" src="assets/images/runout/cover.jpg" alt="Run Out"/>
               </div>
             </div>
 
@@ -140,7 +144,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Custom JavaScript -->
-    <script src="assets/js/scroll.js"></script>
+    <script src="assets/js/navhash.js"></script>
 
   </body>
 </html>
