--- a/index.html
+++ b/index.html
@@ -83,7 +83,75 @@
             More often than not, I spend a lot of time thinking,
             listening to music, reading online and improving myself.
           </p>
+
+          <hr>
+
         </div>
+
+        <div class="container-fluid">
+
+          <!-- 1st row: Three columns -->
+          <div class="row">
+            <!-- Domination -->
+            <div class="col-sm-4 portfolio_item hover_effect">
+              <img class="img-responsive" src="assets/images/domination/cover.jpg" alt="Domination"/>
+              <div class="overlay">
+                <h1>Domination</h1>
+                <h4>Solo (art/design/programming)</h4>
+              </div>
+            </div>
+            <!-- Mirrors -->
+            <div class="col-sm-4 portfolio_item hover_effect" id="mirrors">
+              <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Mirrors"/>
+              <div class="overlay">
+                <h1>Mirrors</h1>
+                <h4>Game Designer/Programmer</h4>
+              </div>
+            </div>
+            <!-- Pizza Craft -->
+            <div class="col-sm-4 portfolio_item hover_effect">
+              <img class="img-responsive" src="assets/images/pizzacraft/cover.jpg" alt="Pizza Craft"/>
+              <div class="overlay">
+                <h1>Pizza Craft</h1>
+                <h4>Game Programmer</h4>
+              </div>
+            </div>
+          </div>
+
+          <!-- 2nd row: Three columns -->
+          <div class="row">
+            <!-- Crazy Jumper -->
+            <div class="col-sm-4 portfolio_item hover_effect">
+              <img class="img-responsive" src="assets/images/crazyjumper/cover.jpg" alt="Crazy Jumper"/>
+              <div class="overlay">
+                <h1>Crazy Jumper</h1>
+                <h4>Game Artist/Programmer</h4>
+              </div>
+            </div>
+            <!-- Adventure Island -->
+            <div class="col-sm-4 portfolio_item hover_effect">
+              <img class="img-responsive" src="assets/images/3disland/cover.jpg" alt="Adventure Island"/>
+              <div class="overlay">
+                <h1>Adventure Island</h1>
+                <h4>Game Designer/Programmer</h4>
+              </div>
+            </div>
+            <!-- Runout -->
+            <div class="col-sm-4 portfolio_item hover_effect">
+              <img class="img-responsive" src="assets/images/runout/cover.jpg" alt="Run Out"/>
+              <div class="overlay">
+                <h1>Run Out</h1>
+                <h4>Game Designer/Programmer</h4>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+
 
       </div> <!-- Homepage end -->
 
