--- a/index.html
+++ b/index.html
@@ -69,93 +69,225 @@
 
         <!-- Bio -->
         <div class="container-fluid" id="bio">
-          <blockquote>
-            <p>Pain is inexhaustible. It’s only people who get exhausted.</p>
-            <footer>Ray Velcoro in <cite>True Detective</cite></footer>
-          </blockquote>
-          <p class="text-justify">
-            Hi! I'm Nikhil Jolly, a game designer and programmer from India.
-            I aspire to be a renaissance man and am usually found juggling
-            between numerous things that I like to do.</br></br>
-            On a casual day, I spend my time developing games as a freelancer,
-            working on my personal projects and improving my art & composition skills.
-            And occasionally, I tend to tinker with new things and explore new places.</br></br>
-            More often than not, I spend a lot of time thinking,
-            listening to music, reading online and improving myself.
-          </p>
 
-          <hr>
+          <!-- Bio brief -->
+          <div class="brief">
+            <blockquote>
+              <p>Pain is inexhaustible. It’s only people who get exhausted.</p>
+              <footer>Ray Velcoro in <cite>True Detective</cite></footer>
+            </blockquote>
+            <p class="text-justify">
+              Hi! I'm Nikhil Jolly, a game designer and programmer from India.
+              I aspire to be a renaissance man and am usually found juggling
+              between numerous things that I like to do.</br></br>
+              On a casual day, I spend my time developing games as a freelancer,
+              working on my personal projects and improving my art & composition skills.
+              And occasionally, I tend to tinker with new things and explore new places.</br></br>
+              More often than not, I spend a lot of time thinking,
+              listening to music, reading online and improving myself.
+            </p>
+            <hr>
+          </div>
 
-        </div>
-
-        <div class="container-fluid">
-
-          <!-- 1st row: Three columns -->
-          <div class="row">
-            <!-- Domination -->
-            <div class="col-sm-4 portfolio_item hover_effect">
-              <img class="img-responsive" src="assets/images/domination/cover.jpg" alt="Domination"/>
-              <div class="overlay">
-                <h1>Domination</h1>
-                <h4>Solo (art/design/programming)</h4>
+          <!-- Bio projects -->
+          <div class="projects">
+            <!-- 1st row: Three columns -->
+            <div class="row">
+              <!-- Domination -->
+              <div class="col-sm-4 portfolio_item hover_effect">
+                <img class="img-responsive" src="assets/images/domination/cover.jpg" alt="Domination"/>
+                <div class="overlay">
+                  <h1>Domination</h1>
+                  <h4>Solo (art/design/programming)</h4>
+                </div>
+              </div>
+              <!-- Mirrors -->
+              <div class="col-sm-4 portfolio_item hover_effect" id="mirrors">
+                <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Mirrors"/>
+                <div class="overlay">
+                  <h1>Mirrors</h1>
+                  <h4>Game Designer/Programmer</h4>
+                </div>
+              </div>
+              <!-- Pizza Craft -->
+              <div class="col-sm-4 portfolio_item hover_effect">
+                <img class="img-responsive" src="assets/images/pizzacraft/cover.jpg" alt="Pizza Craft"/>
+                <div class="overlay">
+                  <h1>Pizza Craft</h1>
+                  <h4>Game Programmer</h4>
+                </div>
               </div>
             </div>
-            <!-- Mirrors -->
-            <div class="col-sm-4 portfolio_item hover_effect" id="mirrors">
-              <img class="img-responsive" src="assets/images/mirrors/cover.jpg" alt="Mirrors"/>
-              <div class="overlay">
-                <h1>Mirrors</h1>
-                <h4>Game Designer/Programmer</h4>
+            <!-- 2nd row: Three columns -->
+            <div class="row">
+              <!-- Crazy Jumper -->
+              <div class="col-sm-4 portfolio_item hover_effect">
+                <img class="img-responsive" src="assets/images/crazyjumper/cover.jpg" alt="Crazy Jumper"/>
+                <div class="overlay">
+                  <h1>Crazy Jumper</h1>
+                  <h4>Game Artist/Programmer</h4>
+                </div>
               </div>
-            </div>
-            <!-- Pizza Craft -->
-            <div class="col-sm-4 portfolio_item hover_effect">
-              <img class="img-responsive" src="assets/images/pizzacraft/cover.jpg" alt="Pizza Craft"/>
-              <div class="overlay">
-                <h1>Pizza Craft</h1>
-                <h4>Game Programmer</h4>
+              <!-- Adventure Island -->
+              <div class="col-sm-4 portfolio_item hover_effect">
+                <img class="img-responsive" src="assets/images/3disland/cover.jpg" alt="Adventure Island"/>
+                <div class="overlay">
+                  <h1>Adventure Island</h1>
+                  <h4>Game Designer/Programmer</h4>
+                </div>
+              </div>
+              <!-- Runout -->
+              <div class="col-sm-4 portfolio_item hover_effect">
+                <img class="img-responsive" src="assets/images/runout/cover.jpg" alt="Run Out"/>
+                <div class="overlay">
+                  <h1>Run Out</h1>
+                  <h4>Game Designer/Programmer</h4>
+                </div>
               </div>
             </div>
           </div>
 
-          <!-- 2nd row: Three columns -->
-          <div class="row">
-            <!-- Crazy Jumper -->
-            <div class="col-sm-4 portfolio_item hover_effect">
-              <img class="img-responsive" src="assets/images/crazyjumper/cover.jpg" alt="Crazy Jumper"/>
-              <div class="overlay">
-                <h1>Crazy Jumper</h1>
-                <h4>Game Artist/Programmer</h4>
+          <!-- Bio resume -->
+          <div class="resume">
+
+            <!-- Work -->
+            <h2>work experience</h2>
+
+            <!-- Row 1: Indie -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p class="date">June 2014 - Now</p>
+              </div>
+              <div class="col-sm-8">
+                <p class="title">Indie Game Developer</p>
+              </div>
+              <div class="col-sm-2">
+                <p class="sub_title">Personal</h4>
               </div>
             </div>
-            <!-- Adventure Island -->
-            <div class="col-sm-4 portfolio_item hover_effect">
-              <img class="img-responsive" src="assets/images/3disland/cover.jpg" alt="Adventure Island"/>
-              <div class="overlay">
-                <h1>Adventure Island</h1>
-                <h4>Game Designer/Programmer</h4>
+            <!-- Row 2: Indie -->
+            <div class="row">
+              <div class="col-sm-2">
+              </div>
+              <div class="col-sm-8">
+                <p>Created - Domination</p>
+              </div>
+              <div class="col-sm-2">
               </div>
             </div>
-            <!-- Runout -->
-            <div class="col-sm-4 portfolio_item hover_effect">
-              <img class="img-responsive" src="assets/images/runout/cover.jpg" alt="Run Out"/>
-              <div class="overlay">
-                <h1>Run Out</h1>
-                <h4>Game Designer/Programmer</h4>
+
+            <!-- Row 1: Freelance -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p class="date">June 2014 - Now</p>
+              </div>
+              <div class="col-sm-8">
+                <p class="title">Freelance Game Developer</p>
+              </div>
+              <div class="col-sm-2">
+                <p class="sub_title">Fiverr.com</h4>
               </div>
             </div>
+            <!-- Row 2: Freelance -->
+            <div class="row">
+              <div class="col-sm-2">
+              </div>
+              <div class="col-sm-8">
+                <p>Collaborated on Pizza Craft, Crazy Jumper, Run Out, etc.</p>
+              </div>
+              <div class="col-sm-2">
+              </div>
+            </div>
+
+            <!-- Educaton -->
+            <h2>education</h2>
+
+            <!-- Row 1: College -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p class="date">2012 - 2016</p>
+              </div>
+              <div class="col-sm-8">
+                <p class="title">Bachelor of Engineering</p>
+              </div>
+              <div class="col-sm-2">
+                <p class="sub_title">Chitkara University</h4>
+              </div>
+            </div>
+            <!-- Row 2: College -->
+            <div class="row">
+              <div class="col-sm-2">
+              </div>
+              <div class="col-sm-8">
+                <p>Major - Computer Science and Technology</p>
+                <p>CGPA: 7.37/10</p>
+              </div>
+              <div class="col-sm-2">
+              </div>
+            </div>
+
+            <!-- Projects -->
+            <h2>projects</h2>
+
+            <!-- Row 1: Mirrors -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p class="date">June - Aug 2016</p>
+              </div>
+              <div class="col-sm-8">
+                <p class="title">Mirrors (PC)</p>
+              </div>
+              <div class="col-sm-2">
+                <p class="sub_title">Freelancing</h4>
+              </div>
+            </div>
+            <!-- Row 2: Mirrors -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p><em>Unity3d</em></p>
+              </div>
+              <div class="col-sm-8">
+                <p><em>Game Designer/Programmer</em></p>
+                <p>Worked on a minimalistic 3d first person, puzzle-platform game inspired from the popular game, Portal.</p>
+              </div>
+              <div class="col-sm-2">
+              </div>
+            </div>
+
+            <!-- Row 1: Chop Wood -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p class="date">June 2016 - Now</p>
+              </div>
+              <div class="col-sm-8">
+                <p class="title">Chop Wood (iOS/Android)</p>
+              </div>
+              <div class="col-sm-2">
+                <p class="sub_title">Freelancing</h4>
+              </div>
+            </div>
+            <!-- Row 2: Chop Wood -->
+            <div class="row">
+              <div class="col-sm-2">
+                <p><em>Unity3d</em></p>
+              </div>
+              <div class="col-sm-8">
+                <p><em>Game Programmer</em></p>
+                <p>Working on an undisclosed game for Sage Realities. More at chopwoodgame.com</p>
+              </div>
+              <div class="col-sm-2">
+              </div>
+            </div>
+
+
           </div>
 
+
         </div>
-
-
-
-
-
 
       </div> <!-- Homepage end -->
 
-      <!-- Projects -->
+      <!-- Projects Full -->
       <div class="tab-pane fade below-navbar" id="projects">
         <div class="container-fluid">
 
