--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" integrity="sha384-OHBBOqpYHNsIqQy8hL1U+8OXf9hH6QRxi0+EODezv82DfnZoV7qoHAZDwMwEJvSw" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animations.css">
 
   </head>
 
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light animated fadeIn" id="myNavbar">
+    <nav class="navbar navbar-expand-md navbar-light" id="myNavbar">
 
       <a class="navbar-brand" href="">Nikhil Jolly</a>
 
@@ -48,7 +47,7 @@
     <div class="tab-content" id="pills-tabContent">
 
       <!-- Personal -->
-      <div class="tab-pane animated fadeInUp show active" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
+      <div class="tab-pane slideUp active" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
 
         <div class="container-fluid portfolio">
 
@@ -111,7 +110,7 @@
       </div>
 
       <!-- Work -->
-      <div class="tab-pane animated fadeInUp" id="pills-work" role="tabpanel" aria-labelledby="pills-work-tab">
+      <div class="tab-pane slideUp" id="pills-work" role="tabpanel" aria-labelledby="pills-work-tab">
 
         <div class="container-fluid portfolio">
 
@@ -199,7 +198,7 @@
       </div>
 
       <!-- About -->
-      <div class="tab-pane animated fadeInUp" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+      <div class="tab-pane slideUp" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
 
         <div class="container-fluid" id="about">
 
