--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div class="tab-content" id="pills-tabContent">
 
       <!-- Personal -->
-      <div class="tab-pane slideUp active" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
+      <div class="tab-pane active" id="pills-personal" role="tabpanel" aria-labelledby="pills-personal-tab">
 
-        <div class="container-fluid portfolio">
+        <div class="container-fluid slideUp portfolio">
 
           <div class="row">
             <!-- tiny little boat -->
@@ -110,9 +110,9 @@
       </div>
 
       <!-- Work -->
-      <div class="tab-pane slideUp" id="pills-work" role="tabpanel" aria-labelledby="pills-work-tab">
+      <div class="tab-pane" id="pills-work" role="tabpanel" aria-labelledby="pills-work-tab">
 
-        <div class="container-fluid portfolio">
+        <div class="container-fluid slideUp portfolio">
 
           <div class="row">
             <!-- Pizza Craft -->
@@ -198,9 +198,9 @@
       </div>
 
       <!-- About -->
-      <div class="tab-pane slideUp" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+      <div class="tab-pane" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
 
-        <div class="container-fluid" id="about">
+        <div class="container-fluid slideUp" id="about">
 
           <div class="row">
             <!-- About Image -->
