--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-md navbar-light" id="myNavbar">
+    <nav class="navbar navbar-expand-md navbar-light fadeIn" id="myNavbar">
 
       <a class="navbar-brand" href="">Nikhil Jolly</a>
 
