--- a/index.html
+++ b/index.html
@@ -117,23 +117,27 @@
           <div class="row">
             <!-- Pizza Craft -->
             <div class="col-md-7">
-              <img src="assets/img/pizzacraft/1.png" class="img-fluid" alt="Pizza Craft">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Pizza Craft</h3>
-                  <h6>Game Developer</h6>
+              <img src="assets/img/pizzacraft/cover.png" class="img-fluid" alt="Pizza Craft">
+              <a href="posts/pizzacraft.html">
+                <div class="overlay">
+                  <div class="text">
+                    <h3>Pizza Craft</h3>
+                    <h6>Game Developer</h6>
+                  </div>
                 </div>
-              </div>
+              </a>
             </div>
             <!-- Chop Wood -->
             <div class="col-md-5">
-              <img src="assets/img/chopwood/1.png" class="img-fluid" alt="Chop Wood">
-              <div class="overlay">
-                <div class="text">
-                  <h3>Chop Wood</h3>
-                  <h6>Game Developer</h6>
+              <img src="assets/img/chopwood/cover.png" class="img-fluid" alt="Chop Wood">
+              <a href="posts/chopwood.html">
+                <div class="overlay">
+                  <div class="text">
+                    <h3>Chop Wood</h3>
+                    <h6>Game Developer</h6>
+                  </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
 
